--- a/src/examples/mongo_example_hammer.cfg
+++ b/src/examples/mongo_example_hammer.cfg
@@ -1,12 +1,11 @@
+[exec]
+threads=2
+iterations=1
+latency=10
+hammer.class=hammers.mongo.SimpleMongoHammer
+
 [mongo]
 ip=localhost
 port=27017
 db=test
 collection=coll
-
-[exec]
-threads=2
-iterations=1
-latency=10
-hammer.package=examples
-hammer.class=mongo.SimpleMongoHammer
